# sr_interface

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Dockerfile  LICENSE  README.md  aws.yml  circle.yml  entrypoint.sh  jenkins.yml  mainpage.dox  manifest.xml  package.xml  project.rosinstall  pull_request_template.md  repository.rosinstall  setup.py  shippable.yml
hand_kinematics/: CMakeLists.txt  README.txt  hand_kinematics_plugins.xml  mainpage.dox  manifest.xml  package.xml
hand_kinematics/launch/: hand_kinematics.launch  hand_kinematics_standalone.launch  hand_plugin_test.launch  shadowhand_motor.srdf
hand_kinematics/src/: hand_kinematics_coupling.cpp  hand_kinematics_coupling_plugin.cpp  hand_kinematics_utils.cpp
hand_kinematics/test/: circle_ik.cpp  command_line_tests.txt  fingertip_pos_publisher.py  hand_kinematics_plugin_test.test  hand_kinematics_test.cpp  square_ik_th.cpp  test_hand_kinematics.launch  test_kinematics_as_plugin.cpp  test_kinematics_as_service.cpp  upmc_fkik_test.cpp
sr_benchmarking/: CMakeLists.txt  package.xml  setup.py
sr_demos/: CMakeLists.txt  README.md  package.xml  setup.py
sr_demos/config/: burn_in_states.yaml  demo_joint_states.yaml  joints_in_hand.yaml
sr_error_reporter/: CMakeLists.txt  README.md  package.xml
sr_error_reporter/msg/: UnderactuationError.msg
sr_error_reporter/src/: UnderactuationErrorReporter.cpp  UnderactuationErrorReporter.hpp  error_reporter.cpp
sr_example/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml  setup.py
sr_example/config/: demo_grasps.yaml
sr_example/doc/: README.md
sr_example/msg/: StringFloat.msg
sr_example/src/: link_joints.cpp
sr_example/srv/: GetJointStates.srv
sr_example/test/: test_examples.py  test_examples.test
sr_grasp/: .catkin_lint_ignore  CMakeLists.txt  README.md  package.xml  setup.py
sr_grasp/cfg/: Grasp.cfg  GraspPlanner.cfg
sr_grasp/resource/: grasps.yaml
sr_grasp/scripts/: convert_xml.py  grasp  grasp_planner  quick_grasp
sr_grasp/test/: test_grasp.py  test_grasp.test  test_grasp_contact.py  test_grasp_contact.test
sr_hand_kinematics/hand_kinematics/: .catkin_lint_ignore  CMakeLists.txt  README.md  hand_kinematics_plugins.xml  package.xml
sr_hand_kinematics/kdl_coupling/: CMakeLists.txt  mainpage.dox  package.xml
sr_interface/: CMakeLists.txt  package.xml  tmp.txt
sr_moveit_hand_config/: .setup_assistant  CMakeLists.txt  package.xml  setup.py
sr_moveit_hand_config/config/: controllers.yaml  fake_controllers.yaml  generated_shadowhand.srdf  generated_shadowhand.urdf  joint_limits.yaml  joint_limits_template.yaml  kinematics.yaml  kinematics_bio_ik_template.yaml  kinematics_bioik_template.yaml  kinematics_kdl_template.yaml  kinematics_template.yaml  kinematics_trac_ik_template.yaml  ompl_planning.yaml  ompl_planning_template.yaml  sensors_rgbd.yaml  shadowhand.srdf.xacro  shadowhand_motor.srdf  shadowhands.srdf.xacro  shadowhands_prefix.srdf.xacro
sr_moveit_hand_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group_actual.launch  moveit.rviz  moveit_planning_and_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  scene.launch  sensor_manager.launch.xml  setup_assistant.launch  shadowhand_motor_moveit_controller_manager.launch.xml  shadowhand_motor_moveit_sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch.xml
sr_moveit_hand_config/scripts/: generate_load_moveit_config.py  generate_moveit_config.py  generate_srdf.py  timed_roslaunch.sh  virtual_joint_broadcaster.py
sr_multi_description/: CMakeLists.txt  package.xml
sr_multi_description/arm_calibration/: bristol_ur10_calibration.yaml
sr_multi_description/urdf/: bimanual_srhand_lite_ur5e.urdf.xacro  bimanual_srhand_plus_bt_sp_biotacs_ur10.urdf.xacro  bimanual_srhand_plus_bt_sp_biotacs_ur10e.urdf.xacro  bimanual_srhand_ur.urdf.xacro  bimanual_srhand_ur10.urdf.xacro  bimanual_srhand_ur10e.urdf.xacro  bimanual_srhand_ur5.urdf.xacro  bimanual_srhand_ur5e.urdf.xacro  bimanual_ur.urdf.xacro  bimanual_ur10.urdf.xacro  bimanual_ur10e.urdf.xacro  both_srhand_two_ur10_two_hands.urdf.xacro  gzplugin_grasp_fix.urdf.xacro  left_srhand_lite_ur5.urdf.xacro  left_srhand_lite_ur5e.urdf.xacro  left_srhand_ur10.urdf.xacro  left_srhand_ur10_bt_sp_biotacs.urdf.xacro  left_srhand_ur10_joint_limited.urdf.xacro  left_srhand_ur10e.urdf.xacro  left_srhand_ur10e_bt_sp_biotacs.urdf.xacro  left_srhand_ur5.urdf.xacro  left_srhand_ur5_joint_limited.urdf.xacro  left_srhand_ur5e.urdf.xacro  right_srhand_bt_sp_biotacs_two_ur10.urdf.xacro  right_srhand_extra_lite_ur5_joint_limited.urdf.xacro  right_srhand_lite_ur10_joint_limited.urdf.xacro  right_srhand_lite_ur10e.urdf.xacro  right_srhand_lite_ur5.urdf.xacro  right_srhand_lite_ur5_joint_limited.urdf.xacro  right_srhand_lite_ur5e.urdf.xacro  right_srhand_stand_ur10.urdf.xacro  right_srhand_stand_ur10_bt_sp_biotacs.urdf.xacro  right_srhand_two_ur10.urdf.xacro  right_srhand_two_ur10_two_hands.urdf.xacro  right_srhand_ur10.urdf.xacro  right_srhand_ur10_biotacs.urdf.xacro  right_srhand_ur10_bt_sp_biotacs.urdf.xacro  right_srhand_ur10_joint_limited.urdf.xacro  right_srhand_ur10_joint_limited_biotacs.urdf.xacro  right_srhand_ur10_new_driver.urdf.xacro  (+14 more)
sr_multi_moveit/sr_moveit_planner_benchmarking/: CMakeLists.txt  README.md  package.xml  setup.py
sr_multi_moveit/sr_multi_moveit_config/: CMakeLists.txt  README.md  package.xml
sr_multi_moveit/sr_multi_moveit_test/: CMakeLists.txt  package.xml
sr_multi_moveit/sr_remote_warehouse/: package.xml
sr_multi_moveit_test/: CMakeLists.txt  package.xml
sr_multi_moveit_test/test/: test_planners.py  test_planners_left_arm.test  test_planners_right_arm.test
sr_robot_commander/: CMakeLists.txt  README.rst  package.xml  setup.py
sr_robot_commander/launch/: grasp_saver_unsafe.launch  (+1 more)
sr_robot_launch/: .catkin_lint_ignore  CMakeLists.txt  README.md  package.xml  setup.py
(+1010 files in other folders)
