<?xml version="1.0"?>
<package>
  <name>sr_robot_commander</name>
  <version>0.0.1</version>
  <description>This is a ROS interface to the robotic arm.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Andriy Petlovanyy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>

  <test_depend>rostest</test_depend>
</package>
