<?xml version="1.0"?>
<package>
  <name>sr_benchmarking</name>
  <version>0.0.0</version>
  <description>
    Contains the base classes for doing different benchmnarking.
  </description>

  <author email="ugo@shadowrobot.com">Ugo Cupcic</author>
  <maintainer email="software@shadowrobot.com">Shadow Software Team</maintainer>

  <license>GPL</license>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
