<?xml version="1.0"?>
<package format="2">
  <name>sr_error_reporter</name>
  <version>0.1.0</version>
  <description>Package for calculating and publishing various errors.</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
</package>
