<!--
 Software License Agreement (BSD License)
 Copyright © 2022-2023 belongs to Shadow Robot Company Ltd.
 All rights reserved.
 Redistribution and use in source and binary forms, with or without modification,
 are permitted provided that the following conditions are met:
   1. Redistributions of source code must retain the above copyright notice,
      this list of conditions and the following disclaimer.
   2. Redistributions in binary form must reproduce the above copyright notice,
      this list of conditions and the following disclaimer in the documentation
      and/or other materials provided with the distribution.
   3. Neither the name of Shadow Robot Company Ltd nor the names of its contributors
      may be used to endorse or promote products derived from this software without
      specific prior written permission.
 This software is provided by Shadow Robot Company Ltd "as is" and any express
 or implied warranties, including, but not limited to, the implied warranties of
 merchantability and fitness for a particular purpose are disclaimed. In no event
 shall the copyright holder be liable for any direct, indirect, incidental, special,
 exemplary, or consequential damages (including, but not limited to, procurement of
 substitute goods or services; loss of use, data, or profits; or business interruption)
 however caused and on any theory of liability, whether in contract, strict liability,
 or tort (including negligence or otherwise) arising in any way out of the use of this
 software, even if advised of the possibility of such damage.
-->

<package>

  <name>sr_moveit_hand_config</name>
  <version>0.2.0</version>
  <description>
     A package with all the configuration and launch files for using every shadow hands with the MoveIt Motion Planning Framework
     Autogenerated config where adapted to generate new config coherent with the current URDF uploaded on the parameter server
  </description>
  <author email="assistant@moveit.ros.org">MoveIt Setup Assistant</author>
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>

  <run_depend>srdfdom</run_depend>
  <run_depend>urdfdom_py</run_depend>
  <run_depend>python3-yaml</run_depend>
  <run_depend>rosparam</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>sr_description</build_depend>
  <run_depend>sr_description</run_depend>
  <build_depend>trac_ik_kinematics_plugin</build_depend>
  <run_depend>trac_ik_kinematics_plugin</run_depend>
  <build_depend>trac_ik_lib</build_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>sr_utilities_common</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
